--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 	"dependencies": {
 		"@camunda/zeebe-element-templates-json-schema": "^0.12.0",
 		"camunda-bpmn-js": "^3.1.2",
-		"monaco-editor": "^0.40.0",
-		"webpack": "^5.75.0"
+		"monaco-editor": "^0.40.0"
 	},
 	"devDependencies": {
 		"css-loader": "^6.7.3",
 		"style-loader": "^3.3.1",
+		"webpack": "^5.88.2",
 		"webpack-cli": "^5.0.1",
 		"webpack-dev-server": "^4.11.1"
 	}
